--- a/dockerfile/akka/akka/config/data-input.conf
+++ b/dockerfile/akka/akka/config/data-input.conf
@@ -78,14 +78,25 @@ common {
   sec = " "
 }
 
-log {
-  path = "/opt/akka/data/log.log"
-  sleeptime = "1000"
+rpc {
+  path = "akka.tcp://RpcForActor@flink:12551/user/rpcActor"
 }
 
-kafka {
+log {
+  type = "file"
+  file_path = "/opt/akka/data/log.log"
+  sleeptime = "1000"
+  port_server = "/opt/akka/data/port.txt"
+}
+
+kafka_producer {
   uri = "kafka:9092"
   topic = "test"
+}
+
+kafka_consumer {
+  uri = "kafka:9092"
+  topic = "wanda_sit,wanda_prod,wanda_uat,wanda_test"
 }
 
 cors.allowed-origin = "*"
