--- a/dockerfile/akka/akka/config/data-output.conf
+++ b/dockerfile/akka/akka/config/data-output.conf
@@ -60,8 +60,17 @@ http {
   port = 9091
 }
 
+common {
+  sec = " "
+}
+
+rpc {
+  path = "akka.tcp://RpcForActor@flink:12551/user/rpcActor"
+}
+
 cassandra {
   host = ["cassandra"]
+  port = 9042
   keyspace = "mydb"
   username = ""
   password = ""
