--- a/dockerfile/akka/akka/config/data-output.conf
+++ b/dockerfile/akka/akka/config/data-output.conf
@@ -65,7 +65,7 @@ common {
 }
 
 rpc {
-  path = "akka.tcp://RpcForActor@flink:12551/user/rpcActor"
+  path = "akka.tcp://RpcForActor@RPC_HOST:12551/user/rpcActor"
 }
 
 cassandra {
