--- a/dockerfile/akka/akka/config/data-input.conf
+++ b/dockerfile/akka/akka/config/data-input.conf
@@ -79,7 +79,7 @@ common {
 }
 
 rpc {
-  path = "akka.tcp://RpcForActor@flink:12551/user/rpcActor"
+  path = "akka.tcp://RpcForActor@RPC_HOST:12551/user/rpcActor"
 }
 
 log {
