--- a/dockerfile/akka/akka/config/data-input.conf
+++ b/dockerfile/akka/akka/config/data-input.conf
@@ -61,6 +61,28 @@ akka {
   }
 }
 
+spray.can{
+    server {
+      server-header=smack
+      idle-timeout = 630 s
+      request-timeout = 600 s
+      request-chunk-aggregation-limit = 0
+      parsing {
+        max-uri-length             = 2k
+        max-response-reason-length = 64
+        max-header-name-length     = 64
+        max-header-value-length    = 8k
+        max-header-count           = 64
+        max-content-length         = 8m
+        max-chunk-ext-length       = 256
+        max-chunk-size             = 1m
+        uri-parsing-mode = strict
+        illegal-header-warnings = on
+        incoming-auto-chunking-threshold-size = 45k
+      }
+    }
+}
+
 akka.kafka.producer {
   parallelism = 100
   close-timeout = 60s
